[package]
name = "kyomi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
bytemuck = { version = "1.18.0", features = ["derive"] }
bytes = "1.7.1"
display-info = "0.5.1"
pollster = "0.3.0"
regex = "1.11.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["fs", "full", "macros", "net"] }
urlencoding = "2.1.3"
webbrowser = "1.0.2"
wgpu = "22.1.0"
wgpu_text = "0.9.0"
winit = "0.30.5"
